VSE audio strips are broken, overlapping strips #107289

Closed
opened 2023-04-24 12:14:49 +02:00 by Rik Schutte · 7 comments

System Information
Operating system: Linux-6.2.12-gentoo-x86_64-AMD_Ryzen_9_3900X_12-Core_Processor-with-glibc2.36 64 Bits, X11 UI
Graphics card: AMD Radeon RX 6700 XT (navi22, LLVM 15.0.7, DRM 3.49, 6.2.12-gentoo) AMD 4.6 (Core Profile) Mesa 23.0.2

Blender Version
Broken: version: 3.6.0 Alpha, branch: HEAD (modified), commit date: 2023-04-23 12:22, hash: 2ed6f738dae1
Worked: (newest version of Blender that worked as expected)

Short description of error
VSE audio strips seem to be glitching in length, when selecting them the length changes as the in- and out points are not where they should be

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Linux-6.2.12-gentoo-x86_64-AMD_Ryzen_9_3900X_12-Core_Processor-with-glibc2.36 64 Bits, X11 UI Graphics card: AMD Radeon RX 6700 XT (navi22, LLVM 15.0.7, DRM 3.49, 6.2.12-gentoo) AMD 4.6 (Core Profile) Mesa 23.0.2 **Blender Version** Broken: version: 3.6.0 Alpha, branch: HEAD (modified), commit date: 2023-04-23 12:22, hash: `2ed6f738dae1` Worked: (newest version of Blender that worked as expected) **Short description of error** VSE audio strips seem to be glitching in length, when selecting them the length changes as the in- and out points are not where they should be **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Rik Schutte added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-04-24 12:14:50 +02:00
Iliya Katushenock added the
Interest
User Interface
Interest
VFX & Video
labels 2023-04-24 15:17:41 +02:00

Hi, thank for report, i not sure if i can reproduce this from scratch. Can you share some simple example file?

Hi, thank for report, i not sure if i can reproduce this from scratch. Can you share some simple example file?

Please upload sample .blend so we can reproduce the issue. I can't deduce what is broken from provided video.

Please upload sample .blend so we can reproduce the issue. I can't deduce what is broken from provided video.
Richard Antalik added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-04-25 00:12:46 +02:00
Author

here is the edit file i'm using, the files are probably offline for you, but the strips should still exist i believe. i noticed some duration, start and end values are off the chart.

here is the edit file i'm using, the files are probably offline for you, but the strips should still exist i believe. i noticed some duration, start and end values are off the chart.

Thanks for the file. Unfortunately, I can't tell exactly how this could have happened, but I have suspicion - a possibility is, that when file is saved with newer version like 3.3, than opened and resaved in previous version, this can cause versioning to basically happen twice resulting in broken strip. see #107588

Do you have version of this file that works correctly in some blender version? I would need to reproduce strip corruption itself, to be sure.

Also I am not sure if I can fix already broken file like this. I could prevent what I suspect is happening. Possibly I can fix broken offsets by placing whole strip somewhere in timeline, but that I would hardly call a fix.

Thanks for the file. Unfortunately, I can't tell exactly how this could have happened, but I have suspicion - a possibility is, that when file is saved with newer version like 3.3, than opened and resaved in previous version, this can cause versioning to basically happen twice resulting in broken strip. see #107588 Do you have version of this file that works correctly in some blender version? I would need to reproduce strip corruption itself, to be sure. Also I am not sure if I can fix already broken file like this. I could prevent what I suspect is happening. Possibly I can fix broken offsets by placing whole strip somewhere in timeline, but that I would hardly call a fix.
Author

I can try to open it in a previous version yes

I can try to open it in a previous version yes
Author

this was opened in a build from a month ago, but other odd behavior seems to kick in. i now hear all audio mixed up over the timeline.

this was opened in a build from a month ago, but other odd behavior seems to kick in. i now hear all audio mixed up over the timeline.

Hello all, I have gone ahead and done some testing with this error. I have made a new bugreport (below) that helps identify the issue more clearly. I have also provided a simplified test file you can use to verify the fix.

@iss can you confirm that this bug exists on yourside?

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-09 13:40, hash: d864b5ce28ee
Worked: version: 3.3.6, branch: master, commit date: 2023-04-17 14:03, hash: 948f8298b982

Short description of error
Some Strips are HIDDEN from UI but APPEAR when attempting to select other overlapping strips.

These strips are only hidden in the current Blender version. Opening the same file in blender 3.3.6 reveals all bad strips as not hidden.

Exact steps for others to reproduce the error

  1. Open attached sound_clip_bug.blend
  2. Attempt to select a strip in VSE at Frame:1169 on Channel:40
  3. A hidden Strip will appear to overlap the selected strip in UI

Demo of Error

error_sound_Strip_names
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-09 13:40, hash: d864b5ce28ee

Expected Results

image
Worked: version: 3.3.6, branch: master, commit date: 2023-04-17 14:03, hash: 948f8298b982

Hello all, I have gone ahead and done some testing with this error. I have made a new bugreport (below) that helps identify the issue more clearly. I have also provided a simplified test file you can use to verify the fix. @iss can you confirm that this bug exists on yourside? **System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-09 13:40, hash: `d864b5ce28ee` Worked: version: 3.3.6, branch: master, commit date: 2023-04-17 14:03, hash: `948f8298b982` **Short description of error** Some Strips are HIDDEN from UI but APPEAR when attempting to select other overlapping strips. These strips are only hidden in the current Blender version. Opening the same file in blender 3.3.6 reveals all bad strips as not hidden. **Exact steps for others to reproduce the error** 1. Open attached [sound_clip_bug.blend](https://projects.blender.org/attachments/8bc1c557-77fe-437b-b4c0-de2cbe4e7f8b) 2. Attempt to select a strip in VSE at Frame:1169 on Channel:40 3. A hidden Strip will appear to overlap the selected strip in UI # Demo of Error ![error_sound_Strip_names](/attachments/4d642fc1-12d8-415e-b430-42cd9fb908fb) Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-09 13:40, hash: `d864b5ce28ee` # Expected Results ![image](/attachments/b2cf7e7a-864b-4039-8c62-0fff4a1fb83a) Worked: version: 3.3.6, branch: master, commit date: 2023-04-17 14:03, hash: `948f8298b982`
Blender Bot added
Status
Resolved
and removed
Status
Needs Information from User
labels 2023-05-09 22:14:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107289
No description provided.