Fix #107289: Sound strips are invisible and overlap

In some cases strips may end up with speed factor of 0 which causes
offsets and position to be invalid. The exact cause is unknown, but
most likely caused by `do_versions_sequencer_init_retiming_tool_data()`.

This could possibly happen if 3.6 file is saved with 3.5 version and
then opened again with 3.6 version.

To fix strips, sound length is reloaded, offsets stripped and speed
factor is set to 1. Previous versioning code is fixed, so speed factor is never set to 0.